cleanup data after every test based on job id